Switch to Java 21 and fix deprecations